--- a/ProiectMC/Client/include/MainWindow.ui
+++ b/ProiectMC/Client/include/MainWindow.ui
@@ -135,6 +135,19 @@
 				<string>Visualize Explosion</string>
 			</property>
 		</widget>
+		<widget class="QLabel" name="playerScoreLabel">
+			<property name="geometry">
+				<rect>
+					<x>10</x>
+					<y>10</y>
+					<width>120</width>
+					<height>30</height>
+				</rect>
+			</property>
+			<property name="text">
+				<string>Score: 0</string>
+			</property>
+		</widget>
 
 
 		<widget class="QStatusBar" name="statusBar"/>
